# ProjetsUniversitaires

./: README.md
BDD_relationnelle/: Dataset_experiment_simplified.csv  Ginda_Millet.sql  README.md
Kaggle/: README.md
Kaggle/fichiers_ipynb/: Jusina_Titanic.ipynb
Licence/Gyromite/: README.md
Licence/Pinterest_like/donnees_uti/: inscription.php
Master/analyse_image/: CMakeLists.txt  README.md  RG.cpp  contours.cpp
Master/analyse_image/tools/: command_line.h  command_line_contours.h
Master/animations/Partie 1/: README.md
Master/animations/Partie 1/src-etudiant/: CalculsMSS.cpp  CalculsParticule.cpp  CalculsRigidBody.cpp  CalculsSPH.cpp  Noeuds.h  ObjetSimule.cpp  ObjetSimule.h  ObjetSimuleMSS.cpp  ObjetSimuleMSS.h  ObjetSimuleParticule.cpp  ObjetSimuleParticule.h  ObjetSimuleRigidBody.h  ObjetSimuleSPH.cpp  ObjetSimuleSPH.h  Scene.cpp  Scene.h  SolveurExpl.cpp  Viewer-init.cpp  Viewer.cpp  Viewer.h
Master/animations/Partie 2/: README.md
Master/animations/Partie 2/master_CharAnim/: CharAnimViewer.cpp  CharAnimViewer.h  CharacterController.cpp  CharacterController.h  Skeleton.cpp  Skeleton.h  Viewer.cpp  Viewer.h  main.cpp
Master/animations/Partie 3/: README.md
Master/animations/Partie 3/code/: TP_CONTROLEUR_Linux.cscope_file_list  TP_CONTROLEUR_Linux.layout  TP_CONTROL_BIPED.out  motion.txt
Master/animations/Partie 3/code/Box2D/src/Testbed/: HelloWorld.cpp
Master/animations/Partie 3/code/Box2D/src/glfw/: _mingw_dxhelper.h  dinput.h  xinput.h
Master/animations/Partie 3/code/src/: Creature.cpp  Creature.h  Motion.cpp  Motion.h  PDController.cpp  PDController.h
Master/animations/Partie 3/code/src/Framework/: Application.cpp  Application.h  DebugDraw.cpp  DebugDraw.h  Main.cpp
Master/computer_vision/: README.md  README_Expensive_func.md  cube_struct.py  detect2.py  expensive_func.pyx  setup.py
Master/monde_virtuel/: README.md  premake4.lua
Master/monde_virtuel/src/M2_MMV/: dijkstra.h  main.cpp  scalarfield.cpp  scalarfield.h  terrain.cpp  terrain.h  utils.h
Master/pom/: README.md
Master/pom/tests/test_compilation/: CMakeLists.txt
Master/pom/tests/test_compilation/progs/: cut-by-plane.cpp
Master/pom/tests/test_compilation/tools/: Linear_cell_complex_cut_operation.h  lcc_creations.h
Master/pom/tests/test_reconstruction/: CMakeLists.txt
Master/pom/tests/test_reconstruction/progs/: point_cloud_proc.cpp  reconstruction.cpp  shape_detection.cpp
Master/pom/tests/test_reconstruction/tools/: Linear_cell_complex_cut_operation.h  lcc_triangulate_faces.h  typedefs.h
Master/synthese_image_3d/: README.md  premake4.lua
Master/synthese_image_3d/data/gltf/: cornell.gltf
Master/synthese_image_3d/data/shaders/: shader_splash.glsl
Master/synthese_image_3d/src/M2_SI3D/: tp2_splash.cpp  tp3.cpp  utils.h
Millebourne/: Makefile  projet_lifap4.code-workspace
Pinterest_like/: README.md
(+6 files in other folders)
